--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Traffik 🌎</title>
+    <title>Traffik 🌎 - The #1 Admin Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
